bin_PROGRAMS = agendas
agendas_SOURCES = agendas.cpp datos_meses.cpp datos_per.cpp fecha.cpp \
	listapi_datos_meses.cpp listapi_datos_per.cpp gestor_agenda.cpp

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
agendas_LDFLAGS = $(all_libraries) 
noinst_HEADERS = datos_meses.h datos_per.h fecha.h listapi_datos_meses.h \
	listapi_datos_per.h gestor_agenda.h
